{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 121,
  "lineage": "c3ba9dfb-2b32-ef06-77ca-277aab3af829",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db9040eb3ab74509",
            "arn": "arn:aws:ec2:eu-central-1:379537366226:instance/i-026dca072bf64fbd9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026dca072bf64fbd9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "labkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01c6fc7c1ebdc3bce",
            "private_dns": "ip-192-168-2-242.eu-central-1.compute.internal",
            "private_ip": "192.168.2.242",
            "public_dns": "ec2-35-159-39-162.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.159.39.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d9c3e6b4305c54c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a4bd364ca5b8f20",
            "tags": {
              "Name": "jenkins_master_tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ccacf73119f6bdef"
            ]
          },
          "dependencies": [
            "aws_key_pair.master-key",
            "aws_security_group.lab-sg",
            "aws_subnet.subnet_ci",
            "aws_vpc.vpc_lab",
            "data.aws_ssm_parameter.MasterAmi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db9040eb3ab74509",
            "arn": "arn:aws:ec2:eu-central-1:379537366226:instance/i-0375da915a7735d2b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0375da915a7735d2b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "labkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04b4e7970f872738a",
            "private_dns": "ip-192-168-3-166.eu-central-1.compute.internal",
            "private_ip": "192.168.3.166",
            "public_dns": "ec2-54-93-102-3.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.102.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc3efb6a4c3c4f0e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ecb649203470d01",
            "tags": {
              "Name": "Production server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ccacf73119f6bdef"
            ]
          },
          "dependencies": [
            "aws_key_pair.master-key",
            "aws_security_group.lab-sg",
            "aws_subnet.subnet_cd",
            "aws_vpc.vpc_lab",
            "data.aws_ssm_parameter.MasterAmi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:379537366226:internet-gateway/igw-0224b2ed77b68be40",
            "id": "igw-0224b2ed77b68be40",
            "owner_id": "379537366226",
            "tags": {
              "Name": "lab Gateway"
            },
            "vpc_id": "vpc-05a4f144d72b6f801"
          },
          "dependencies": [
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00c36ed8fef86b2f3",
            "owner_id": "379537366226",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0224b2ed77b68be40",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-route-table"
            },
            "vpc_id": "vpc-05a4f144d72b6f801"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab_gw",
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cd_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7254017b9f186a0",
            "route_table_id": "rtb-00c36ed8fef86b2f3",
            "subnet_id": "subnet-07ecb649203470d01"
          },
          "dependencies": [
            "aws_internet_gateway.lab_gw",
            "aws_route_table.internet_route_lab",
            "aws_subnet.subnet_cd",
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ci_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2d2b817a21c2e83",
            "route_table_id": "rtb-00c36ed8fef86b2f3",
            "subnet_id": "subnet-05a4bd364ca5b8f20"
          },
          "dependencies": [
            "aws_internet_gateway.lab_gw",
            "aws_route_table.internet_route_lab",
            "aws_subnet.subnet_ci",
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:379537366226:security-group/sg-0ccacf73119f6bdef",
            "description": "Allow TCP/8080 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccacf73119f6bdef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from any",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "lab-sg",
            "name_prefix": "",
            "owner_id": "379537366226",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a4f144d72b6f801"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_cd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:379537366226:subnet/subnet-07ecb649203470d01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-07ecb649203470d01",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "379537366226",
            "tags": {
              "Name": "CD subnet"
            },
            "tags_all": {
              "Name": "CD subnet"
            },
            "vpc_id": "vpc-05a4f144d72b6f801"
          },
          "dependencies": [
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_ci",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:379537366226:subnet/subnet-05a4bd364ca5b8f20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-05a4bd364ca5b8f20",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "379537366226",
            "tags": {
              "Name": "CI subnet"
            },
            "tags_all": {
              "Name": "CI subnet"
            },
            "vpc_id": "vpc-05a4f144d72b6f801"
          },
          "dependencies": [
            "aws_vpc.vpc_lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:379537366226:vpc/vpc-05a4f144d72b6f801",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.2.0/23",
            "default_network_acl_id": "acl-0ce80affb62ced755",
            "default_route_table_id": "rtb-01b16e56135a4436a",
            "default_security_group_id": "sg-0509020e08501920c",
            "dhcp_options_id": "dopt-cdef32a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05a4f144d72b6f801",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01b16e56135a4436a",
            "owner_id": "379537366226",
            "tags": {
              "Name": "lab VPC"
            },
            "tags_all": {
              "Name": "lab VPC"
            }
          }
        }
      ]
    }
  ]
}